--- a/_sass/jekyll-theme-pms.scss
+++ b/_sass/jekyll-theme-pms.scss
@@ -18,7 +18,7 @@ html {
   padding: 0;
   position: absolute;
 }
-.fad {
+.far {
   color: var(--primary);
 }
 .text-center {
